--- a/child.html
+++ b/child.html
@@ -31,7 +31,7 @@
     <!-- &&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&& -->
     <div class="form-cont">
       
-       <form id="childForm">
+       <form id="childForm" method="POST" action="https://script.google.com/macros/s/AKfycbzZ_12Hzl_Tlyh6rG-2YaQSXQbLxlrKU4FdKtuNCd-LLl9motSFZ-vuVnhjSrLBiaI6/exec">
             <h2>Add New Child Name Below</h2>
             <input type="text" name="name" placeholder="Full Name" required>
             <input type="text" name="gender" placeholder="Gender" >
