--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 </head>
 <body>
 
+
+
   <div class="home">
      
       <div class="church-logo">
@@ -37,12 +39,12 @@
       <!-- ****************************** -->      
        <div class="btn-cover">
         <a href="child.html"><button class="btn">Add a Name</button></a>
-        <a href="./tuesday.html"><button class="btn">Enter Tuesday Total</button></a>
+        <a href="./tuesday.html"><button class="btn">Enter Tuesday Total</button></a> <br>
         <a href="./sunday.html"><button class="btn">Enter Sunday Total</button></a>
+        <a href="./view.html"><button class="btn">View Data</button></a>
        </div>
 
-  </div>
-        <!-- **************************** -->
+       <!-- ***************************************8 -->
       <div class="dev">
         <p><b>Developed By:</b></p>
         <img src="./TagsTechie Logo_20250610_085527_0001.png" alt="tagslogo">
@@ -53,7 +55,8 @@
         </div>
       </div>
 
-     <!-- </div> -->
+  </div>
 
+      
 </body>
 </html>
