--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <!-- ****************************** -->      
        <div class="btn-cover">
         <a href="child.html"><button class="btn">Add a Name</button></a>
-        <a href="./tuesday.html"><button class="btn">Enter Tuesday Total</button></a> <br>
+        <a href="./tuesday.html"><button class="btn">Enter Tuesday Total</button></a>
         <a href="./sunday.html"><button class="btn">Enter Sunday Total</button></a>
         <a href="./view.html"><button class="btn">View Data</button></a>
        </div>
