tuesdayhtml code was updated

--- a/sunday.html
+++ b/sunday.html
@@ -33,6 +33,9 @@
     <div class="form-cont">
       
       <form id="dataEntryForm">
+          <input type="hidden" name="formType" value="attendance">
+
+
         <h2>Enter Sunday Attendance Below</h2>     
         <input type="date" id="eventDate" required>
         <p id="dateError" class="error-message"></p>
