--- a/tuesday.html
+++ b/tuesday.html
@@ -32,42 +32,18 @@
 
     <div class="form-cont">
       
-      <form id="dataEntryForm">
-        <h2>Enter Tuesday Attendance Below</h2>       
-        <input type="date" id="eventDate" required>
+     <form id="dataEntryForm">
+        <h2>Enter Tuesday Attendance Below</h2>
+        <input type="date" id="eventDate" name="date" required>
         <p id="dateError" class="error-message"></p>
-        <input type="number" id="numBoys" min="0" value="" placeholder="Number of Boys" required>
-        <input type="number" id="numGirls" min="0" value="" placeholder="Number of Girls" required>
-        <input type="text" id="totalSum" value="" placeholder="Total Attendance" readonly>
+        <input type="number" id="numBoys" name="boys" min="0" placeholder="Number of Boys" required>
+        <input type="number" id="numGirls" name="girls" min="0" placeholder="Number of Girls" required>
+        <input type="text" id="totalSum" name="total" placeholder="Total Attendance" readonly>
         <button type="submit">Save</button>
         <p id="status"></p>
-      </form>
+    </form>
 
-
-    </div>
-<!-- ****************************** -->
-    <script>
-      document.getElementById('dataEntryForm').addEventListener('submit', function(e) {
-      e.preventDefault();
-      const form = e.target;
-      const formData = new FormData(form);
-      const params = new URLSearchParams(formData);
-
-      fetch("", {
-        method: "POST",
-        body: params
-      })
-      .then(res => res.text())
-      .then(text => {
-        document.getElementById('status').innerText = text === "Success" ? "Date registered successfully!" : text;
-        form.reset();
-      })
-      .catch(err => {
-        document.getElementById('status').innerText = "Error: " + err.message;
-      });
-    });
-    </script>
-    
+    </div>   
   
 </body>
 
